# kubrick

./: .env.example  .gitignore  LICENSE  README.md  build-lambda-packages.sh  cli.py  deploy.sh  downloader.py  embed.py  main.py  mongo.py  pg_db.py  pyproject.toml  requirements.txt  schema.sql  search_routes.py  sheets.py  task.py  task_store.py  test_video_validator.py  towhee_test.py  utils.py  vector_db.py  vector_db_pinecone.py  video_validator.py  worker.py  wsgi.py
app/: __init__.py  config.py
app/routes/: __init__.py  search.py  tasks.py  videos.py
app/services/: embed_service.py  vector_db_service.py
app/tasks/: __init__.py  task.py  task_store.py  worker.py
app/utils/: __init__.py  downloader.py  video_validation.py
app/vector_storage/: __init__.py  interface.py  pgvector_storage.py
cli/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
cli/completions/: kubrick.bash
cli/scripts/: setup-completion.js
cli/src/: index.ts
cli/src/assets/: ascii.txt
cli/src/commands/: deploy.ts  destroy.ts  help.ts
cli/src/theme/: ascii.ts  index.ts
cli/src/types/: index.ts
cli/src/utils/: aws.ts  dependencies.ts  lambda.ts  misc.ts  shell.ts  symbols.ts  terraform.ts
cli/tests/commands/: deploy.test.ts
cli/tests/e2e/: cli.test.ts
cli/tests/utils/: misc.test.ts  terraform.test.ts
documentation/: api.md
lambda/: build-package.sh
lambda/api_fetch_tasks_handler/: config.json  lambda_function.py  pyproject.toml
lambda/api_fetch_videos_handler/: config.json  lambda_function.py  pyproject.toml
lambda/api_search_handler/: config.json  lambda_function.py  pyproject.toml  search_controller.py
lambda/api_video_upload_link_handler/: build-package.sh  lambda_function.py  pyproject.toml
lambda/db_bootstrap/: build-package.sh  config.json  lambda_function.py  pyproject.toml  schema.sql
lambda/db_init_handler/: config.json  lambda_function.py  pyproject.toml  schema.sql
lambda/embedding-task-to-sqs/: build-lambda.sh  config.json  lamdbda_function.py  pyproject.toml
lambda/fetch-tasks/: config.json  config.py  lambda_function.py  pyproject.toml
lambda/fetch_tasks/: lambda_function.py  pyproject.toml
lambda/fetch_videos/: build-lambda.sh  build-package.sh  config.json  config.py  lambda_function.py  pyproject.toml
lambda/generate-video-upload-link/: build-lambda.sh  pyproject.toml
lambda/generate_video_upload_link/: lambda_function.py  pyproject.toml
lambda/handle_s3_bucket_video_delete/: build-lambda.sh  config.py  lambda_function.py  pyproject.toml  utils.py
lambda/layers/config_layer/: build-package.sh  config.py  pyproject.toml
lambda/layers/embed_service_layer/: build-package.sh  embed_service.py  pyproject.toml
lambda/layers/response_utils_layer/: build-package.sh  pyproject.toml  response_utils.py
lambda/layers/s3_utils_layer/: pyproject.toml  s3_utils.py
lambda/layers/vector_database_layer/: build-package.sh  pyproject.toml  vector_db_service.py
lambda/s3_delete_event_handler/: build-lambda.sh  config.json  lambda_function.py  pyproject.toml  utils.py
lambda/s3_delete_handler/: build-package.sh  pyproject.toml
lambda/search/: build-lambda.sh  build-package.sh  config.json  config.py  embed_service.py  lambda_function.py  pyproject.toml  response_utils.py  search_controller copy.py  search_controller.py  search_errors.py  search_service.py  vector_db_service.py
lambda/sqs_embedding_task_consumer/: build-lambda.sh  build-package.sh  lambda_function.py  main.py  pyproject.toml
lambda/sqs_embedding_task_producer/: build-package.sh  config.json  lambda_function.py  pyproject.toml  utils.py
lambda/src/api_fetch_tasks_handler/: lambda_function.py
lambda/src/api_fetch_videos_handler/: lambda_function.py  pyproject.toml
lambda/src/api_search_handler/: lambda_function.py  pyproject.toml  search_controller.py  search_errors.py
lambda/src/api_video_upload_link_handler/: lambda_function.py  pyproject.toml
lambda/src/db_bootstrap/: lambda_function.py
lambda/src/s3_delete_handler/: lambda_function.py
lambda/src/sqs_embedding_task_consumer/: lambda_function.py
lambda/src/sqs_embedding_task_producer/: lambda_function.py
lambda/tests/old/s3_delete_handler/: pyproject.toml  test_s3_delete_handler.py
lambda/tests/unit/: conftest.py  mock_data.py  pyproject.toml  test_api_fetch_tasks_handler.py  test_api_fetch_videos_handler.py  test_api_search_handler.py  test_api_video_upload_link_handler.py  test_s3_delete_handler.py  test_sqs_embedding_task_consumer.py  test_sqs_embedding_task_producer.py
lambda/tests/unit/api_fetch_videos_handler/: pyproject.toml  test_api_fetch_videos_handler.py
lambda/tests/unit/api_search_handler/: pyproject.toml  test_api_search_handler.py
lambda/tests/unit/api_video_upload_link_handler/: pyproject.toml
lambda/tests/unit/sqs_embedding_task_consumer/: pyproject.toml
lambda/tests/unit/sqs_embedding_task_producer/: test_sqs_embedding_task_producer.py
layers/vector_database_layer/: build-package.sh  vector_db_service.py
playground/: README.md  deploy.sh  next.config.ts  package-lock.json  package.json
playground/public/: animation.json
playground/src/app/: globals.css  layout.tsx
playground/src/hooks/: useKubrickAPI.ts  useViewportPagination.ts
playground/src/types/: index.ts
skateboard/: .gitignore  app.py  downloader.py  requirements.txt  text_embedder.py  vector_db.py  video_embedder.py
terraform/: .terraform.lock.hcl  data.tf  locals.tf  main.tf  output.json  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
terraform/modules/api_gateway/: locals.tf  main.tf  outputs.tf  variables.tf
terraform/modules/cloudfront/: main.tf  outputs.tf  variables.tf
terraform/modules/dynamodb/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: locals.tf  main.tf  outputs.tf  variables.tf
terraform/modules/lambda/: archives.tf  locals.tf  main.tf  outputs.tf  provisioners.tf  variables.tf
terraform/modules/rds/: main.tf  outputs.tf  variables.tf
terraform/modules/s3/: main.tf  outputs.tf  (+1 more)
tests/unit/: test_video_validation.py
(+49 files in other folders)
