[project]
name = "kubrick"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ffmpeg>=1.4",
  "flask>=3.1.1",
  "get-video-properties>=0.1.1",
  "prompt-toolkit>=3.0.51",
  "psycopg2-binary>=2.9.10",
  "python-dotenv>=1.1.1",
  "requests>=2.32.4",
  "twelvelabs>=0.4.11",
  "yt-dlp>=2025.6.30",
]
