[project]
name = "fetch_videos"
version = "0.1.0"
description = "Lambda Function to Handle GET /videos"
requires-python = ">=3.13"
dependencies = ["twelvelabs>=0.4.11"]

[tool.pyright]
extraPaths = [
  "../layers/vector_database_layer/",
  "../layers/embed_service_layer/",
  "../layers/response_utils_layer/",
]
