[project]
name = "handle_s3_bucket_video_delete"
version = "0.1.0"
description = "Handles Video Delete in S3 Bucket"
readme = ""
requires-python = ">=3.13"
dependencies = [
  "boto3>=1.39.11",
]

[tool.pyright]
extraPaths = [
  "../layers/vector_database_layer/",
  "../layers/embed_service_layer/",
  "../layers/configlayer/",
]
