[project]
name = "search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["multipart>=1.2.1", "pydantic>=2.11.7", "twelvelabs>=0.4.11"]

[tool.pyright]
extraPaths = [
  "../layers/vector_database_layer/",
  "../layers/embed_service_layer/",
  "../layers/response_utils_layer/",
]
