[project]
name = "SQSEmbeddingTaskConsumer"
version = "0.1.0"
description = "SQS Embedding Task Consumer Lambda function"
readme = ""
requires-python = ">=3.13"
dependencies = ["boto3>=1.39.10", "twelvelabs>=1.0.0b0"]

[tool.pyright]
extraPaths = [
  "../layers/vector_database_layer/",
  "../layers/embed_service_layer/",
]
