[project]
name = "SQSEmbeddingTaskProducer"
version = "0.1.0"
description = "SQS Embedding Task Producer Lambda function"
readme = ""
requires-python = ">=3.13"
dependencies = ["boto3>=1.39.11", "twelvelabs>=1.0.0b0"]

[tool.pyright]
extraPaths = [
  "../layers/vector_database_layer/",
  "../layers/embed_service_layer/",
]
