[project]
name = "kubrick_api_search_handler"
version = "0.1.0"
description = "Handle POST requests to `/search` endpoint"
readme = ""
requires-python = ">=3.13"
dependencies = ["multipart>=1.2.1", "pydantic>=2.11.7"]

[tool.pyright]
extraPaths = [
  "../layers/vector_database_layer/",
  "../layers/embed_service_layer/",
  "../layers/response_utils_layer/",
  "../layers/s3_utils_layer/",
  "../layers/config_layer/",
]
