[project]
name = "Kubrick_api_video_upload_link_handler_test"
version = "0.1.0"
description = "Tests for api_video_upload_link_handler lambda function"
requires-python = ">=3.13"
dependencies = ["pytest", "moto", "psycopg2-binary", "multipart>=1.2.1", "pydantic>=2.11.7", "twelvelabs>=1.0.0b0", "httpx==0.28.1", "aioboto3"]

[tool.pyright]
extraPaths = [
  "../../../layers/vector_database_layer/",
  "../../../layers/response_utils_layer/",
  "../../../layers/embed_service_layer/",
  "../../../layers/s3_utils_layer/",
  "../../../layers/config_layer/",
]
